--- a/index.html
+++ b/index.html
@@ -34,12 +34,28 @@
         </main>
 
         <footer>
-          Status: In print
-          Categories: Area Control, Educational, Historical, Light Strategy, Puzzle, Tile Placement, Worker Placement
-          Publisher: AwesomeSpiel
-          Designer: Kerstin Eichelberger
-          Year: 2011
-          Awards: 2012 Spiel of the Year Winner, 2012 Golden Pyramid Game Award Winner, 2012 Geek Website Game of the Year Nominee
+          <dl>
+            <dt>Status:</dt>
+            <dd>In print</dd>
+
+            <dt>Categories: </dt>
+            <dd>
+              <ol>
+                <li>Area Control</li>
+                <li>Educational</li>
+                <li>Historical</li>
+                <li>Light Strategy</li>
+                <li>Puzzle</li>
+                <li>Tile Placement</li>
+                <li>Worker Placement</li>
+              </ol>
+            </dd>
+
+            Publisher: AwesomeSpiel
+            Designer: Kerstin Eichelberger
+            Year: 2011
+            Awards: 2012 Spiel of the Year Winner, 2012 Golden Pyramid Game Award Winner, 2012 Geek Website Game of the Year Nominee
+          </dl>
         </footer>
 
         <aside>
