Create list items

--- a/index.html
+++ b/index.html
@@ -51,10 +51,21 @@
               </ol>
             </dd>
 
-            Publisher: AwesomeSpiel
-            Designer: Kerstin Eichelberger
-            Year: 2011
-            Awards: 2012 Spiel of the Year Winner, 2012 Golden Pyramid Game Award Winner, 2012 Geek Website Game of the Year Nominee
+            <dt>Publisher:</dt>
+            <dd>AwesomeSpiel</dd>
+            <dt>Designer:</dt>
+            <dd>Kerstin Eichelberger</dd>
+            <dt>Year:</dt>
+            <dd>2011</dd>
+
+            <dt>Awards:</dt>
+            <dd>
+              <ul>
+                <li>2012 Spiel of the Year Winner</li>
+                <li>2012 Golden Pyramid Game Award Winner</li>
+                <li>2012 Geek Website Game of the Year Nominee</li>
+              </ul>
+            </dd>
           </dl>
         </footer>
 
